$NetBSD: CHANGES,v 1.30 2018/11/25 23:48:14 mrg Exp $

changes in bozohttpd 20181125:
	o  fixes for option parsing introduced in bozohttpd 20181123

changes in bozohttpd 20181121:
	o  add url remap support via .bzremap file, from martin@netbsd.org
	o  handle redirections for any protocol, not just http:
	o  fix a denial of service attack against header contents, which
	   is now bounded at 16KiB.  reported by JP
	o  reduce default timeouts, and add expand timeouts to handle the
	   initial line, each header, and the total time spent
	o  add -T option to expose new timeout settings
	o  minor RFC fixes related to timeout handling
	o  fix special file (.htpasswd, .bz*) bypass.  reported by JP

changes in bozohttpd 20170201:
	o  fix an infinite loop in cgi processing
	o  fixes and clean up for the testsuite
	o  no longer sends encoding header for compressed formats

changes in bozohttpd 20160517:
	o  add a bozo_get_version() function which returns the version number

changes in bozohttpd 20160415:
	o  add search-word support for CGI
	o  fix a security issue in CGI suffix handler support which would
	   allow remote code execution, from shm@netbsd.org
	o  -C option supports now CGI scripts only

changes in bozohttpd 20151028:
	o  add CGI support for ~user translation (-E switch)
	o  add redirects to ~user translation
	o  fix bugs around ~user translation
	o  add schema detection for absolute redirects
	o  fixed few memory leaks
	o  bunch of minor tweaks
	o  removed -r support
	o  smarter redirects 

changes in bozohttpd 20150320:
	o  fix redirection handling
	o  support transport stream (.ts) and video object (.vob) files
	o  directory listings show correct file sizes for large files

changes in bozohttpd 20140717:
	o  properly handle SSL errors

changes in bozohttpd 20140708:
	o  fixes for virtual host support, from rajeev_v_pillai@yahoo.com
	o  avoid printing double errors, from shm@netbsd.org
	o  fix a security issue in basic HTTP authentication which would allow