@@ -1,4 +1,4 @@
-/*	$NetBSD: dir-index-bozo.c,v 1.28 2018/11/22 08:54:08 mrg Exp $	*/
+/*	$NetBSD: dir-index-bozo.c,v 1.29 2018/12/04 02:52:42 mrg Exp $	*/
 
 /*	$eterna: dir-index-bozo.c,v 1.20 2011/11/18 09:21:15 mrg Exp $	*/
 
@@ -45,14 +45,6 @@
 
 #include "bozohttpd.h"
 
-static void
-directory_hr(bozohttpd_t *httpd)
-{
-
-	bozo_printf(httpd,
-		"<hr noshade align=\"left\" width=\"80%%\">\r\n\r\n");
-}
-
 /*
  * output a directory index.  return 1 if it actually did something..
  */
@@ -62,12 +54,10 @@ bozo_dir_index(bozo_httpreq_t *request, const char *dirpath, int isindex)
 	bozohttpd_t *httpd = request->hr_httpd;
 	struct stat sb;
 	struct dirent **de, **deo;
-	struct tm *tm;
 	DIR *dp;
 	char buf[MAXPATHLEN];
-	char spacebuf[48];
 	char *file = NULL, *printname = NULL;
-	int l, k, j, i;
+	int k, j, i;
 
 	if (!isindex || !httpd->dir_indexing)
 		return 0;
@@ -117,23 +107,19 @@ bozo_dir_index(bozo_httpreq_t *request, const char *dirpath, int isindex)
 	printname = bozostrdup(httpd, request, request->hr_file);
 #endif /* !NO_USER_SUPPORT */
 
-	bozo_printf(httpd,
-		"<html><head><title>Index of %s</title></head>\r\n",
+	bozo_printf(httpd, "<!DOCTYPE html>\r\n");
+	bozo_printf(httpd, "<html><head><meta charset=\"utf-8\"/>\r\n");
+	bozo_printf(httpd, "<style type=\"text/css\">tr.o {background:#f4f4f4;}</style>\r\n");
+	bozo_printf(httpd, "<title>Index of %s</title></head>\r\n",
 		printname);
 	bozo_printf(httpd, "<body><h1>Index of %s</h1>\r\n",
 		printname);
-	bozo_printf(httpd, "<pre>\r\n");
-#define NAMELEN 40
-#define LMODLEN 19
-	bozo_printf(httpd, "Name                                     "
-	    "Last modified          "
-	    "Size\n");
-	bozo_printf(httpd, "</pre>");
-	directory_hr(httpd);
-	bozo_printf(httpd, "<pre>");
+	bozo_printf(httpd, "<table>\r\n<thead>\r\n");
+	bozo_printf(httpd, "<tr class=\"o\"><th>Name<th>Last modified<th align=right>Size\r\n");
+	bozo_printf(httpd, "<tbody>\r\n");
 
-	for (j = k = scandir(dirpath, &de, NULL, alphasort), deo = de;
-	    j--; de++) {
+	for (j = k = scandir(dirpath, &de, NULL, alphasort), deo = de, i = 1;
+	    j--; de++, i++) {
 		int nostat = 0;
 		char *name = (*de)->d_name;
 		char *urlname, *htmlname;
@@ -147,62 +133,39 @@ bozo_dir_index(bozo_httpreq_t *request, const char *dirpath, int isindex)
 		if (stat(buf, &sb))
 			nostat = 1;
 
-		l = 0;
-
 		urlname = bozo_escape_rfc3986(httpd, name, 0);
 		htmlname = bozo_escape_html(httpd, name);
 		if (htmlname == NULL)
 			htmlname = name;
+		bozo_printf(httpd, "<tr class=\"%s\"><td>", (i & 1) ? "o" : "e");
 		if (strcmp(name, "..") == 0) {
 			bozo_printf(httpd, "<a href=\"../\">");
-			l += bozo_printf(httpd, "Parent Directory");
+			bozo_printf(httpd, "Parent Directory");
 		} else if (!nostat && S_ISDIR(sb.st_mode)) {
 			bozo_printf(httpd, "<a href=\"%s/\">", urlname);
-			l += bozo_printf(httpd, "%s/", htmlname);
+			bozo_printf(httpd, "%s/", htmlname);
 		} else if (strchr(name, ':') != NULL) {
 			/* RFC 3986 4.2 */
 			bozo_printf(httpd, "<a href=\"./%s\">", urlname);
-			l += bozo_printf(httpd, "%s", htmlname);
+			bozo_printf(httpd, "%s", htmlname);
 		} else {
 			bozo_printf(httpd, "<a href=\"%s\">", urlname);
-			l += bozo_printf(httpd, "%s", htmlname);
+			bozo_printf(httpd, "%s", htmlname);
 		}
 		if (htmlname != name)
 			free(htmlname);
 		bozo_printf(httpd, "</a>");
 
-		/* NAMELEN spaces */
-		/*LINTED*/
-		assert(/*CONSTCOND*/sizeof(spacebuf) > NAMELEN);
-		i = (l < NAMELEN) ? (NAMELEN - l) : 0;
-		i++;
-		memset(spacebuf, ' ', (size_t)i);
-		spacebuf[i] = '\0';
-		bozo_printf(httpd, "%s", spacebuf);
-		l += i;
-
 		if (nostat)
-			bozo_printf(httpd, "?                         ?");
+			bozo_printf(httpd, "<td>?<td>?\r\n");
 		else {
 			unsigned long long len;
 
+			strftime(buf, sizeof buf, "%d-%b-%Y %R", gmtime(&sb.st_mtime));
+			bozo_printf(httpd, "<td>%s", buf);
+
 			len = ((unsigned long long)sb.st_size + 1023) / 1024;
-
-			tm = gmtime(&sb.st_mtime);
-			strftime(buf, sizeof buf, "%d-%b-%Y %R", tm);
-			l += bozo_printf(httpd, "%s", buf);
-
-			/* LMODLEN spaces */
-			/*LINTED*/
-			assert(/*CONSTCOND*/sizeof(spacebuf) > LMODLEN);
-			i = (l < (LMODLEN+NAMELEN+1)) ?
-				((LMODLEN+NAMELEN+1) - l) : 0;
-			i++;
-			memset(spacebuf, ' ', (size_t)i);
-			spacebuf[i] = '\0';
-			bozo_printf(httpd, "%s", spacebuf);
-
-			bozo_printf(httpd, "%12llukB", len);
+			bozo_printf(httpd, "<td align=right>%llukB", len);
 		}
 		bozo_printf(httpd, "\r\n");
 	}
@@ -211,8 +174,7 @@ bozo_dir_index(bozo_httpreq_t *request, const char *dirpath, int isindex)
 	while (k--)
         	free(deo[k]);
 	free(deo);
-	bozo_printf(httpd, "</pre>");
-	directory_hr(httpd);
+	bozo_printf(httpd, "</table>\r\n");
 	bozo_printf(httpd, "</body></html>\r\n\r\n");
 	bozo_flush(httpd, stdout);
 
@@ -222,4 +184,3 @@ done:
 	return 1;
 }
 #endif /* NO_DIRINDEX_SUPPORT */
-
